[package]
authors = ["John Doneth <doneth7@gmail.com>"]
description = "A fast text renderer for luminance, powered by glyph_brush."
edition = "2018"
keywords = ["font", "ttf", "truetype", "luminance", "text"]
license = "MIT"
name = "luminance-glyph"
readme = "README.md"
repository = "https://github.com/JohnDoneth/luminance-glyph"
version = "0.3.0"

[dependencies]
glyph_brush = "0.7.2"
log = "0.4.14"
luminance = "0.44.0"

[dev-dependencies]
glfw = "0.41.0"
luminance-gl = "0.17.0"
luminance-glfw = "0.16.0"
luminance-glutin = "0.12.0"
luminance-windowing = "0.10.0"
