[package]
authors = ["John Doneth <doneth7@gmail.com>"]
description = "A fast text renderer for luminance, powered by glyph_brush."
edition = "2018"
keywords = ["font", "ttf", "truetype", "luminance", "text"]
license = "MIT"
name = "luminance-glyph"
readme = "README.md"
repository = "https://github.com/JohnDoneth/luminance-glyph"
version = "0.4.0"

[dependencies]
glyph_brush = "0.7.3"
log = "0.4.14"
luminance = "0.45.0"

[dev-dependencies]
glfw = "0.42.0"
luminance-gl = "0.18.0"
luminance-glfw = "0.17.0"
luminance-glutin = "0.13.0"
